add style NAV and HEADER

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="nav">
-            <ol>
-                <li><a href="#">Homepage</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#service">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#">External</a></li>
-            </ol>
-        </div>
-        <div class="title">
+        <nav>
+            <a class="nav" href="#">Homepage</a>
+            <a class="nav" href="#about">About Us</a>
+            <a class="nav" href="#service">Services</a>
+            <a class="nav" href="#contact">Contact</a>
+            <a class="nav" href="#">External</a>
+        </nav>
+        <div class="title parallax">
             <h1>CONQUER</h1>
             <h2>Simple Bootstrap Template</h2>
         </div>
