--- a/index.html
+++ b/index.html
@@ -25,34 +25,36 @@
         <div class="container">
             <div class="box">
                 <img src="img/1-1.jpg" alt="Bootstrap v3.3.6">
-                <h1>Bootstrap v3.3.6</h1>
+                <h1 class="green">Bootstrap v3.3.6</h1>
                 <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-                <a href="#">Button Green</a>
+                <a class="button b-green" href="#">Button Green</a>
             </div>
             <div class="box">
                 <img src="img/1-2.jpg" alt="Responsive Design">
-                <h1>Responsive Design</h1>
+                <h1 class="blue">Responsive Design</h1>
                 <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-                <a href="#">Button Blue</a>
+                <a class="button b-blue" href="#">Button Blue</a>
             </div>
             <div class="box">
                 <img src="img/1-3.jpg" alt="Parallax Layout">
-                <h1>Parallax Layout</h1>
+                <h1 class="red">Parallax Layout</h1>
                 <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-                <a href="#">Button Red</a>
+                <a class="button b-red" href="#">Button Red</a>
             </div>
         </div>
         <div class="container">
             <div class="column">
                 <img src="img/2-1.jpg" alt="Two Column Left Side">
                 <h1>Two Column Left Side</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</br>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
             </div>
             <div class="column">
                 <img src="img/2-2.jpg" alt="Two Column Right Side">
                 <h1>Two Column Right Side</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</br>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
-                <a href="#">Read More</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <a class="more" href="#">Read More</a>
             </div>
         </div>
     </section>
