--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a class="nav" href="#contact">Contact</a>
             <a class="nav" href="#">External</a>
         </nav>
-        <div class="title parallax">
-            <h1>CONQUER</h1>
+        <div class="title parallax background1">
+            <h1 class="title-font1">CONQUER</h1>
             <h2>Simple Bootstrap Template</h2>
         </div>
     </header>
@@ -43,74 +43,84 @@
             </div>
         </div>
         <div class="container">
-            <div class="column">
+            <div class="column column-width1">
                 <img src="img/2-1.jpg" alt="Two Column Left Side">
                 <h1>Two Column Left Side</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
-                <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <p class="p-padding1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                <p class="p-padding1">Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
             </div>
-            <div class="column">
+            <div class="column column-width1">
                 <img src="img/2-2.jpg" alt="Two Column Right Side">
                 <h1>Two Column Right Side</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
-                <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
-                <a class="more" href="#">Read More</a>
+                <p class="p-padding1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+                <p class="p-padding1">Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
+                <a class="more button-position1" href="#">Read More</a>
             </div>
         </div>
     </section>
     <section id="service">
-        <h1>Our Services</h1>
-        <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
-    </section>
-    <section>
-        <div class="column">
-            <img src="img/4-1.jpg" alt="Column One">
-            <h1>Column One</h1>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+        <div class="title parallax background2">
+            <h1 class="title-font2">Our Services</h1>
+            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
         </div>
-        <div class="column">
-            <img src="img/4-2.jpg" alt="Column Two">
-            <h1>Column Two</h1>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
-            <a href="#">Read It</a>
+        <div class="container">
+            <div class="column column-width2">
+                <img src="img/4-1.jpg" alt="Column One">
+                <h1>Column One</h1>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+            </div>
+            <div class="column column-width2">
+                <img src="img/4-2.jpg" alt="Column Two">
+                <h1>Column Two</h1>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+                <a class="more button-position1" href="#">Read It</a>
+            </div>
+            <div class="column column-width2">
+                <img src="img/4-3.jpg" alt="Column Three">
+                <h1>Column Three</h1>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+            </div>
+            <div class="column column-width2">
+                <img src="img/4-4.jpg" alt="Column Four">
+                <h1>Column Four</h1>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+                <a class="more button-position1" href="#">Details</a>
+            </div>
         </div>
-        <div class="column">
-            <img src="img/4-3.jpg" alt="Column Three">
-            <h1>Column Three</h1>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
-        </div>
-        <div class="column">
-            <img src="img/4-4.jpg" alt="Column Four">
-            <h1>Column Four</h1>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
-            <a href="#">Details</a>
-        </div>
-        <div class="big-column">
-            <img src="img/4-5.jpg" alt="One Big Column">
-            <h1>One Big Column</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. Vivamus dictum nisi ac fermentum interdum. Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus. Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac neque in, sollicitudin convallis orci.<br>Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a urna tellus. Integer pharetra vitae nisi et lacinia. Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque quis, maximus eget nisi.</p>
-            <a href="#">Read More</a>
+        <div class="container">
+            <div class="big-column">
+                <img src="img/4-5.jpg" alt="One Big Column">
+                <h1>One Big Column</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. Vivamus dictum nisi ac fermentum interdum. Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus. Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac neque in, sollicitudin convallis orci.</p>
+                <p>Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a urna tellus. Integer pharetra vitae nisi et lacinia. Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque quis, maximus eget nisi.</p>
+                <a class="more button-position2" href="#">Read More</a>
+            </div>
         </div>
     </section>
     <section id="contact">
-        <div class="contact">
-            <h1>Contact Form</h1>
-            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
-        </div>
-        <div class="input">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Email">
-            <input type="text" placeholder="Subject">
-        </div>
-        <div class="text-area">
-            <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea>
-            <button type="submit">Send</button>
+        <div class="title parallax background3">
+            <div class="contact">
+                <h1 class="title-font3">Contact Form</h1>
+                <p id="p-contact">Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
+            </div>
+            <div class="form">
+                <div class="input">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Subject">
+                </div>
+                <div class="text-area">
+                    <textarea name="message" cols="30" rows="10" placeholder="Your message here..."></textarea>
+                    <a class="more2" href="#">Send</a>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
         <h1>Use it free!</h1>
         <p>“Conquer is free Bootstrap template from templatemo website.<br>No backlink is required to use this layout.”</p>
-        <small>Copyright © 2084 Your Company Name | Design: templatemo</small>
+        <hr>
+        <small>Copyright © 2084 Your Company Name | Design: TemplateMo</small>
     </footer>
 </body>
 </html>
